# ccs-ai-web-intelligent-search-api

./: .gitignore  .pre-commit-config.yaml  README.md  ai_docs_filterer_for_RAG.py  ai_search_api.py  ccs_website_data.py  chatbot_api.py  dummy_flask_app.py  dummy_flask_app2.py  embed_for_simple_ai_search.py  pyproject.toml  pytest.ini  query_filter_retrieval_experiment.ipynb  requirements.txt  reranker.py  rm_page_data.py  system_prompt.py  website_agreement_data2.csv
.github/workflows/: ci.yml
data/: truthset.tsv
scripts/: evaluate.py
src/: convert_langchain_history_to_pydantic.py  eval_utils.py  llm_utils.py  multiturn_utils.py
src/ccs_ai_josh/: eval_utils.py  multiturn_utils.py
src/ccs_ai_josh.egg-info/: PKG-INFO  SOURCES.txt
src/wis/: ai_docs_filterer_for_RAG.py  ccs_website_data.py
static/: ccs_chat.js
static/styles/: chat_sidebar.css
templates/: agreement.html  index.html  index_v2.html  login.html  results.html
templates/partials/: chat_sidebar.html
tests/: conftest.py  test_ccs_website_data.py  test_smoke.py
